@@ -22,6 +22,9 @@ if (Int16_Type == Short_Type)
    check_overflow ("32768h", 1);
    check_overflow ("-32768h", 0);
    check_overflow ("65535hu", 0);
+   check_overflow ("0xFFFF1hu", 1);
+   check_overflow ("0xFFFFh", 0); % no sign overflow checked for hex literals
+   check_overflow ("0xFFFFhu", 0);
 }
 if (Int32_Type == Int_Type)
 {
@@ -29,8 +32,11 @@ if (Int32_Type == Int_Type)
    check_overflow ("2147483648", 1);
    check_overflow ("4294967295U", 0);
    check_overflow ("4294967296U", 1);
+   check_overflow ("0xFFFFFFFF", 0);
+   check_overflow ("0xFFFFFFFF1", 1);
+   check_overflow ("0xFFFFFFFF1U", 1);
+   check_overflow ("0xFFFFFFFFU", 0);
 }
-
 print ("Ok\n");
 
 exit (0);
